# libbriteblox_FTDI

./: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  README  README.build  README.mingw  libbriteblox.lnt  libbriteblox1.pc.in  libbritebloxpp1.pc.in  libftdi-1.0.kdev4  libftdi1-config.in  libftdi1.spec.in
briteblox_eeprom/: example.conf  main.c
britebloxpp/: CMakeLists.txt  briteblox.cpp
cmake/: LibBRITEBLOX1Config.cmake.in  UseLibFTDI1.cmake
doc/: Doxyfile.in  EEPROM-structure  release-checklist.txt
examples/: CMakeLists.txt  baud_test.c  bitbang.c  bitbang2.c  bitbang_cbus.c  bitbang_cbus_eeprom_for_windows.ept  bitbang_ft2232.c  eeprom.c  find_all.c  find_all_pp.cpp  serial_test.c  simple.c  stream_test.c
examples/cmake_example/: CMakeLists.txt  main.c
ftdi_eeprom/: CMakeLists.txt  ftdi_eeprom_version.h.in  main.c
ftdipp/: ftdi.hpp
python/: CMakeLists.txt  ftdi1.i
python/examples/: CMakeLists.txt  complete.py  simple.py
src/: CMakeLists.txt  briteblox.c  briteblox_i.h  ftdi.c  ftdi.h  ftdi_stream.c  ftdi_version_i.h.in
test/: CMakeLists.txt  basic.cpp  baudrate.cpp
